fixed rabbit mq

--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/uuid": "^9.0.8",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.3",
     "aws-sdk": "^2.1569.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
